--- a/project-management-app/package.json
+++ b/project-management-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-management-system",
+  "name": "project-management-app",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
