feat: add registration form layout

--- a/project-management-app/angular.json
+++ b/project-management-app/angular.json
@@ -37,7 +37,8 @@
                         "scripts": [],
                         "stylePreprocessorOptions": {
                             "includePaths": [
-                                "src/style-abstracts/"
+                                "src/scss/abstracts",
+                                "src/scss/components"
                             ]
                         }
                     },
