--- a/project-management-app/package.json
+++ b/project-management-app/package.json
@@ -8,6 +8,7 @@
         "watch": "ng build --watch --configuration development",
         "test": "ng test",
         "lint": "ng lint",
+        "pretty-quick": "pretty-quick",
         "prepare": "cd .. && husky install project-management-app/.husky"
     },
     "private": true,
@@ -50,6 +51,8 @@
         "karma-coverage": "~2.1.0",
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "~1.7.0",
+        "prettier": "^2.6.2",
+        "pretty-quick": "^3.1.3",
         "typescript": "~4.6.2"
     }
 }
