fix: change project path to the tsconfig file

--- a/project-management-app/.eslintrc.json
+++ b/project-management-app/.eslintrc.json
@@ -6,7 +6,7 @@
       "files": ["*.ts"],
       "plugins": ["import"],
       "parserOptions": {
-        "project": ["../project-management-app/tsconfig.json"],
+        "project": ["./tsconfig.json"],
         "createDefaultProgram": true
       },
       "extends": [
