--- a/project-management-app/.eslintrc.json
+++ b/project-management-app/.eslintrc.json
@@ -1,34 +1,32 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates",
-        "airbnb-base",
-        "airbnb-typescript/base",
-        "prettier"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint"
-    ],
-    "rules": {
-      "@angular-eslint/no-empty-lifecycle-method": "off",
-      "import/prefer-default-export": "off",
-      "class-methods-use-this": "off",
-      "no-console": "off",
-      "linebreak-style": "off",
-      "@typescript-eslint/lines-between-class-members": ["off"],
-      "arrow-parens": "off",
-      "no-plusplus": "off",
-      "max-len": ["error", { "code": 130 }]
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@angular-eslint/recommended",
+    "plugin:@angular-eslint/template/process-inline-templates",
+    "airbnb-base",
+    "airbnb-typescript/base",
+    "prettier"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint"],
+  "rules": {
+    "@angular-eslint/no-empty-lifecycle-method": "off",
+    "import/prefer-default-export": "off",
+    "class-methods-use-this": "off",
+    "no-console": "off",
+    "linebreak-style": "off",
+    "@typescript-eslint/lines-between-class-members": ["off"],
+    "arrow-parens": "off",
+    "no-plusplus": "off",
+    "max-len": ["error", { "code": 130 }]
+  }
 }
