--- a/project-management-app/angular.json
+++ b/project-management-app/angular.json
@@ -28,8 +28,7 @@
                         "inlineStyleLanguage": "scss",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets",
-                            "src/_redirects"
+                            "src/assets"
                         ],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
@@ -99,13 +98,15 @@
                         "inlineStyleLanguage": "scss",
                         "assets": [
                             "src/favicon.ico",
-                            "src/assets",
-                            "src/_redirects"
+                            "src/assets"
                         ],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
                             "src/styles.scss"
                         ],
+                        "stylePreprocessorOptions": {
+                            "includePaths": ["src/scss/abstracts"]
+                        },
                         "scripts": []
                     }
                 },
