--- a/project-management-app/package.json
+++ b/project-management-app/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@ngrx/effects": "^13.2.0",
     "@ngrx/store": "^13.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -45,6 +46,7 @@
     "@typescript-eslint/parser": "5.17.0",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-ngrx": "^2.0.0",
     "husky": "^7.0.4",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
@@ -54,7 +56,6 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
-    "typescript": "~4.6.2",
-    "eslint-plugin-ngrx": "^2.0.0"
+    "typescript": "~4.6.2"
   }
 }
