feat: add welcome module

--- a/project-management-app/.eslintrc.json
+++ b/project-management-app/.eslintrc.json
@@ -53,7 +53,8 @@
         "no-plusplus": "off",
         "spaced-comment": [
           "off"
-        ]
+        ],
+        "arrow-body-style": "off"
       }
     },
     {
