--- a/project-management-app/.eslintrc.json
+++ b/project-management-app/.eslintrc.json
@@ -44,7 +44,8 @@
         "arrow-parens": "off",
         "no-plusplus": "off",
         "spaced-comment": ["off"],
-        "ngrx/prefer-effect-callback-in-block-statement": "off"
+        "ngrx/prefer-effect-callback-in-block-statement": "off",
+        "ngrx/on-function-explicit-return-type": "off"
       }
     },
     {
